--- a/src/app/biology-section/bio-details/heterogenious/heterogenious.component.html
+++ b/src/app/biology-section/bio-details/heterogenious/heterogenious.component.html
@@ -1,4 +1,4 @@
-<div class="bannercontainer" id="top">
+<div class="bannercontainer" >
   <img src="http://2018.igem.org/wiki/images/1/1b/T--GO_Paris-Saclay--tableau_banner.png" class="bannerimg superposedbanner1">
   <img src="http://2018.igem.org/wiki/images/9/90/T--GO_Paris-Saclay--empty-banner.png" class="bannerimg superposedbanner2">
   <div class="headlinetext">HeteroGenious</div>
