--- a/src/app/biology-section/chromato-explorer/chromato-explorer.component.html
+++ b/src/app/biology-section/chromato-explorer/chromato-explorer.component.html
@@ -63,15 +63,19 @@
   </div>
 
   <p class="captionmaterialmethod">
-    The HPLC analysis was performed using a reverse phase C18 column. Detection was made using UV spectrophotometry at
+  <p>
+    The samples (50µL of filtrate) were analyzed on an Atlantis C18 T3 column (250 mm x 4.6 mm,
+    5 µm, column temperature 30°C) using an Agilent 1200 HPLC chain with a quaternary pump. Samples were eluted under
+    isocratic conditions of 0.1% HCOOH in H20 (solvent A)/ 0.1% HCOOH in CH3CN (solvent B) (95:5) at 1 ml.min-1 for
+    5 min, followed by a gradient to 0:100 A/B over 40 min. Detection was made using UV spectrophotometry at
     303
     nm (peak absorption 302-303 nm
     <reference-box shorthand="Merck2007"></reference-box>
-    ) with peak-triggered UV-vis spectrum (diode array). The eluting solvent
-    was a gradient of acetonitrile and water (with 0.1% v/v HCOOH). This mode of operation is very similar to the assay
+    ) with peak-triggered UV-vis spectrum (diode array).  This mode of operation is very similar to the assay
     and impurities protocols of reference pharmacopeia for MTX
     <reference-box shorthand="PhEur2017"></reference-box>
     <reference-box shorthand="USP2007"></reference-box>
     .
+  </p>
   </p>
 </mat-card>
