--- a/src/app/biology-section/parts/cpg2/cpg2.component.html
+++ b/src/app/biology-section/parts/cpg2/cpg2.component.html
@@ -146,7 +146,7 @@
     cells and obtain an evaluable supernatant filtrate.
   </p>
   <p>
-    To assess the quantity of MTX remaining, two assays were conducted: HPLC and MTX bioassay.
+    To assess the quantity of MTX remaining, two assays were conducted: HPLC analysis and MTX bioassay.
   </p>
 
   <h2>MTX-detection bioassays</h2>
@@ -164,12 +164,14 @@
   <h2>HPLC analysis</h2>
 
   <p>
-    The HPLC analysis was performed using a reverse phase C18 column. Detection was made using UV spectrophotometry at
+    The samples (50µL of filtrate) were analyzed on an Atlantis C18 T3 column (250 mm x 4.6 mm,
+    5 µm, column temperature 30°C) using an Agilent 1200 HPLC chain with a quaternary pump. Samples were eluted under
+    isocratic conditions of 0.1% HCOOH in H20 (solvent A)/ 0.1% HCOOH in CH3CN (solvent B) (95:5) at 1 ml.min-1 for
+    5 min, followed by a gradient to 0:100 A/B over 40 min. Detection was made using UV spectrophotometry at
     303
     nm (peak absorption 302-303 nm
     <reference-box shorthand="Merck2007"></reference-box>
-    ) with peak-triggered UV-vis spectrum (diode array). The eluting solvent
-    was a gradient of acetonitrile and water (with 0.1% v/v HCOOH). This mode of operation is very similar to the assay
+    ) with peak-triggered UV-vis spectrum (diode array).  This mode of operation is very similar to the assay
     and impurities protocols of reference pharmacopeia for MTX
     <reference-box shorthand="PhEur2017"></reference-box>
     <reference-box shorthand="USP2007"></reference-box>
@@ -358,7 +360,7 @@
   </mat-card>
 
   <p>
-    Quantitatively speaking, using the standard we haveabout 52 uM MTX per unit surface area, for this particular HPLC
+    Quantitatively speaking, using the standard we can calculate the residual MTX concentration according to peak area, for this particular HPLC
     system. This allows
     us to calculate residual MTX concentration for the various conditions :
   </p>
@@ -397,7 +399,7 @@
 
   <h1>Discussion</h1>
   <p>
-    Our HPLC assay protocol proved well suited to our purpose, considering the remarkable lack of interference from
+    Our HPLC analysis protocol proved well suited to our purpose, considering the remarkable lack of interference from
     either LB components, metabolic by-products or DMSO at the chosen wavelength. This validates the method as an easy
     to use assay for MTX in bacterial cell culture.
   </p>
