--- a/src/app/biology-section/parts/j23108/j23108.component.html
+++ b/src/app/biology-section/parts/j23108/j23108.component.html
@@ -1,7 +1,7 @@
 <div class="bannercontainer">
   <img src="http://2018.igem.org/wiki/images/d/dd/T--GO_Paris-Saclay--parts_underbanner.png" class="bannerimg superposedbanner1">
   <img src="http://2018.igem.org/wiki/images/9/90/T--GO_Paris-Saclay--empty-banner.png" class="bannerimg superposedbanner2">
-  <div class="headlinetext">Improved part</div>
+  <div class="headlinetext">Improved&nbsp;part</div>
 </div>
 
 
