--- a/src/app/biology-section/bio-details/mtx-degradation/mtx-degradation.component.html
+++ b/src/app/biology-section/bio-details/mtx-degradation/mtx-degradation.component.html
@@ -1,4 +1,4 @@
-<div class="bannercontainer" id="top">
+<div class="bannercontainer">
   <img src="http://2018.igem.org/wiki/images/1/1b/T--GO_Paris-Saclay--tableau_banner.png" class="bannerimg superposedbanner1">
   <img src="http://2018.igem.org/wiki/images/9/90/T--GO_Paris-Saclay--empty-banner.png" class="bannerimg superposedbanner2">
   <div class="headlinetext">Methotrexate&nbsp;Degradation</div>
@@ -255,7 +255,7 @@
   </mat-card>
 
   <p>
-    Quantitatively speaking, using the standard we haveabout 52 uM MTX per unit surface area, for this particular HPLC
+    Quantitatively speaking, using the standard we can calculate the residual MTX concentration according to peak area, for this particular HPLC
     system. This allows
     us to calculate residual MTX concentration for the various conditions :
   </p>
