--- a/src/app/biology-section/parts/parts.component.html
+++ b/src/app/biology-section/parts/parts.component.html
@@ -76,7 +76,7 @@
 
 <mat-card class="dashboard-card">
 
-  <h2>Bistable system</h2>
+  <h2>HeteroGenious device</h2>
 
   <img src="http://2018.igem.org/wiki/images/a/ab/T--GO_Paris-Saclay--LEE5-ler.png" class="card-illus">
 
